--- a/css/main.css
+++ b/css/main.css
@@ -1871,7 +1871,8 @@ h1, h2, h3, h4, h5, h6 {
     background: #7777; }
 
 #logo {
-  margin-left: 15px; }
+  margin-left: 15px;
+}
   @media (max-width: 673px) {
     #logo {
       margin-left: 20px; } }
